# stegdetect

./: .gitignore  LICENSE  Makefile.am  Makefile.android  Makefile.in  README.md  acconfig.h  aclocal.m4  arc4.c  arc4.h  bf-586.s  bf_locl.h  bf_skey.c  break_jphide.c  break_jphide.h  break_jsteg.c  break_jsteg.h  break_outguess.c  break_outguess.h  cfg.c  cfg.h  chi2cdf.c  chi2cdf.h  common.c  common.h  config.h.in  configure  configure.ac  configure.in  db.c  db.h  dct.c  dct.h  dirname.c  discrimination.c  discrimination.h  extraction.c  extraction.h  f5.c  jphide_table.c  (+22 more)
compat/: md5.h
file/: LEGAL.NOTICE  Localstuff  MAINT  Makefile.am  Makefile.in  Makefile.std  README  acinclude.m4  aclocal.m4  apprentice.c  ascmagic.c  compress.c  config.h.in  configure  configure.in  file.c  file.h  file.man  fsmagic.c  is_tar.c  magic.c  magic.man  magic2mime  mkinstalldirs  names.h  patchlevel.h  print.c  readelf.c  readelf.h  softmagic.c  tar.h
file/Magdir/: .gitignore  archive  commands  hp  msdos  pdp  xenix
jpeg-6b/: Makefile  jdhuff.c  makefile.cfg  makefile.unix
jpeg-6b/CVS/: Entries  Repository  Root
